# olayinka-portfolio

./: .gitignore  README.md  build.sh  db.sqlite3  main.py  note.txt  pyproject.toml  render.yaml
core/: settings.py  urls.py
portfolio/: admin.py  models.py  serializers.py  views.py
portfolio/migrations/: 0001_initial.py  0002_contactmessage.py
templates/: index.html
